# fyg

./: Cargo.toml  README.md  fyg.toml  fyg_root.toml
resources/sample/: fyg.toml
src/: config.rs  lib.rs  main.rs  toml.rs
