[package]
name = "fyg"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0"
git2 = "0.20"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.9", features = ["serde"] }
indicatif = "0.18"
console = "0.15"